# gauss_cpp

./: CMakeLists.txt  README.md
src/: Matrix.cpp  Matrix.h  main.cpp
test/: test.h  testMatrix.cpp  testMatrix.h  test_examples.cpp  test_main.cpp
